# sim_doc_cluster

./: .env.example  Dockerfile  README.md  api.json  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: docker-build.yml
assets/doc_group1/: 1.txt  2.txt
assets/doc_group2/: 1.txt  2.txt
assets/doc_group3/: 1.txt  2.txt
docs/: api.md  offline-deploy.md
scripts/: export-offline-bundle.sh  run_integration_duplicates.py
src/: __init__.py  api.py  config.py  es_client.py  models.py  redis_client.py  services.py  similarity.py  utils.py  worker.py
